[members]
workspace = [
   "rust/algorithms",
]

[package]
name = "bst"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
num-traits = "0.2"
num = "0.4"

[[bin]]
name = "avl"
path = "src/avl.rs"

[[bin]]
name = "bst"
path = "src/bst.rs"

[[bin]]
name = "avl_tree_set"
path = "src/avl_tree_set.rs"

[[bin]]
name = "treap"
path = "src/treap_map.rs"

[[bin]]
name = "bs_tree"
path = "src/bs_tree.rs"

[[bin]]
name = "treap_tree"
path = "src/treap_tree.rs"

[[bin]]
name = "algo"
path = "src/algo2.rs"

[[bin]]
name = "arrays"
path = "src/arrays.rs"


