[members]
workspace = [
   "rust/algorithms",
]

[package]
name = "bst"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
num-traits = "0.2"
num = "0.4"
once_cell = "1.8.0"
plotters = "0.3"

[[bin]]
name = "avl"
path = "src/avl.rs"

[[bin]]
name = "bst"
path = "src/bst.rs"

[[bin]]
name = "avl_tree_set"
path = "src/avl_tree_set.rs"

[[bin]]
name = "treap"
path = "src/treap_map.rs"

[[bin]]
name = "bs_tree"
path = "src/bs_tree.rs"

[[bin]]
name = "treap_tree"
path = "src/treap_tree.rs"

[[bin]]
name = "algo"
path = "src/algo2.rs"

[[bin]]
name = "arrays"
path = "src/arrays.rs"

[[bin]]
name = "allocator"
path = "src/allocator.rs"

[[bin]]
name = "heap_alloc"
path = "src/heap_alloc.rs"

# [lib]
# name = "arrays"
# path = "src/arrays/mod.rs"

[[bin]]
name = "array_main"
path = "src/array_main.rs"

[[bin]]
name = "array_queue"
path = "src/array_queue.rs"

[[bin]]
name = "arrays_"
path = "src/arrays_.rs"

[[bin]]
name = "arraygpt"
path = "src/arraygpt.rs"

[[bin]]
name = "arrays_debug"
path = "src/arrays_debug.rs"

[[bin]]
name = "chess_bit_moves"
path = "src/chess_bit_moves.rs"

[[bin]]
name = "sorts"
path = "src/sorts.rs"

[[bin]]
name = "sort_visualizer"
path = "src/sort_visualizer.rs"

[[bin]]
name = "pyramid_sorts"
path = "src/pyramid_sorts.rs"





